docs: add swagger comment description
